--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,14 @@ author: Aleksander Woźniak <aleksanderwozniak96@gmail.com>
 homepage: https://github.com/aleksanderwozniak/table_calendar
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.4.4 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  intl: ^0.17.0
+  intl: ^0.19.0
   simple_gesture_detector: ^0.2.0
 
 dev_dependencies:
